--- a/src/colors/_colors.scss
+++ b/src/colors/_colors.scss
@@ -1,7 +1,7 @@
 $primary-color: #1a508f;
 $overlay-color: #00000066;
 $border-color: #c9c3c3;
-$shadw-color: #c7c7c7;
+$shadow-color: #c7c7c7;
 
 
 $white: #ffffff;
