--- a/src/components/choice-card/choice-card.scss
+++ b/src/components/choice-card/choice-card.scss
@@ -6,7 +6,7 @@
     width: 100px;
     height: 130px;
     border-radius: 12px;
-    box-shadow: -1px 3px 6px -1px $shadw-color;
+    box-shadow: -1px 3px 6px -1px $shadow-color;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
