--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -27,6 +27,12 @@
       display: none;
     }
   }
+
+  @media screen and (max-width: 550px) {
+    &__content {
+      width: auto;
+    }
+  }
 }
 
 .header {
