--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -18,6 +18,7 @@
     border-radius: 5px;
     width: 60%;
     height: 70%;
+    overflow-y: auto;
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
     animation-name: animatetop;
@@ -85,9 +86,8 @@
     justify-content: center;
     margin-top: 40px;
     gap: 3px;
-    flex-wrap: wrap;
     max-height: 300px;
-    overflow: auto;
+    overflow-x: auto;
     scrollbar-color: $dark-gray $off-white;
     scrollbar-width: thin;
 
@@ -106,6 +106,12 @@
       background-color: $dark-gray;
       border: 4px solid transparent;
       border-radius: 10px;
+    }
+  }
+
+  @media screen and (max-width: 870px) {
+    &__container {
+      justify-content: flex-start;
     }
   }
 }
